# TNCG15-Project

./: .gitignore  CMakeLists.txt  main.cpp
Headers/: Shape.h  Sphere.h  Tetrahedron.h  camera.h  colordbl.h  direction.h  lightsource.h  pixel.h  ray.h  scene.h  triangle.h  vertex.h
Source/: Shape.cpp  Sphere.cpp  Tetrahedron.cpp  camera.cpp  colordbl.cpp  direction.cpp  lightsource.cpp  pixel.cpp  ray.cpp  scene.cpp  triangle.cpp  vertex.cpp
